help/en/docs/css/theme.css
/* ... */
/* mkdocs-material makes global font size bigger on these breakpoints; we don't want that.
Just keep its default of 125% font size at any breakpoint. */
@media screen and (min-width:100em) {
  html {
    font-size: 125%;
  }
}
@media screen and (min-width:125em) {
  html {
    font-size: 125%;
  }
}

.md-skip:focus {
  z-index: 1000;
}

.md-header,
.md-tabs {
  --md-primary-fg-color: var(--grist-light);
  --md-primary-bg-color: var(--md-default-fg-color);
}

.md-main {
  border-top: 1px solid var(--grist-medium-grey);
}


/** Override just for newsletters: don't show the header that comes from emails */
.md-main .newsletter-header .header {
  display: none;
}

/* Render a custom website heading with CSS;
this allows us to avoid overriding the whole mkdocs-material header partial just for this. */
.md-header__title:not(.md-header__title--active) .md-header__topic .md-ellipsis {
  visibility: hidden;
}
.md-header__title:not(.md-header__title--active) .md-header__topic {
  background-image: url('../images/heading.svg');
  background-repeat: no-repeat;
  background-position: center left;
  background-size: 144px 24px;
}

/* fine-tune the material theme "tabs", which are the nav items in the header */
.md-tabs__item--active {
  font-weight: 500;
}

.md-tabs__item--active {
  border-bottom: 2px solid var(--grist-primary);
}

.md-tabs__link {
  opacity: 0.85;
  height: 100%;
}

/* make the header z-index higher than our custom code for homepage (it was very low, making it difficult to add some
custom code relying on z-indexes) */
.md-header {
  z-index: 20;
}
/* make sure the sidebar panel on mobile is rendered above the header now */
/* Note: the max-width value is the same as the one in mkdocs material for the mobile menu breakpoint */
@media screen and (max-width: 76.2344em) {
  .md-sidebar--primary {
    z-index: 25;
  }
}

/* make the search bar in the header blend more into it (with a less pronounced background),
but make sure the borders have WCAG-compliant contrast ratio */
.md-search__input {
  background-color: var(--md-default-bg-color);
  border: 1px solid var(--grist-input-border-color);
  border-radius: 8px;
}
.md-search__input::placeholder {
  color: var(--md-default-fg-color--lighter);
}
.md-search__form {
  background-color: var(--md-default-fg-color--lightest) !important;
  border-radius: 8px 8px 0 0 !important;
}
.md-search__output {
  border-radius: 0 0 8px 8px !important;
}

/* this targets links in both sidebars (left and right) */
.md-nav {
  font-size: 0.75rem;
}

.md-nav__link {
  margin-top: 0.8rem;
}

.md-nav__link--active {
  font-weight: 600;
}

/* fine-tune the left sidebar nav (section-based navigation) */
/* do this only on desktop: just use material theme default styles on mobile */
.g-nav-icon {
  display: none;
}
@media screen and (max-width: 76.2344em) {
  .md-nav--primary .md-nav__title[for="__drawer"] {
    background-color: var(--grist-light);
    color: var(--grist-dark-text);
  }
  .md-nav__title .md-nav__button.md-logo img,
  .md-nav__title .md-nav__button.md-logo svg {
    height: 2rem;
  }
}
/* ... */

